[gd_scene load_steps=2 format=3 uid="uid://bk4asqlje361t"]

[ext_resource type="Script" uid="uid://hhfyyrkuyenh" path="res://pickups/scripts/pickup_area.gd" id="1_m03bp"]

[node name="PickupArea" type="Area2D"]
script = ExtResource("1_m03bp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
